crates/ruff_python_parser/tests/snapshots/invalid_syntax@assign_stmt_keyword_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assign_stmt_keyword_target.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            28,
        ),
        range: 0..42,
        body: [
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        6,
                    ),
                    range: 0..12,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    1,
                                ),
                                range: 0..1,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    3,
                                ),
                                range: 4..8,
                                id: Name("pass"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                5,
                            ),
                            range: 11..12,
                            id: Name("c"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        12,
                    ),
                    range: 13..18,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(
                                11,
                            ),
                            range: 13..18,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        8,
                                    ),
                                    range: 13..14,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        10,
                                    ),
                                    range: 17..18,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(
                        21,
                    ),
                    range: 19..35,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    14,
                                ),
                                range: 19..20,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    16,
                                ),
                                range: 23..24,
                                id: Name("b"),
                                ctx: Store,
                            },
                        ),
                        Name(
                            ExprName {
                                node_index: NodeIndex(
                                    18,
                                ),
                                range: 27..31,
                                id: Name("pass"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                20,
                            ),
                            range: 34..35,
                            id: Name("c"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        27,
                    ),
                    range: 36..41,
                    value: BinOp(
                        ExprBinOp {
                            node_index: NodeIndex(
                                26,
                            ),
                            range: 36..41,
                            left: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        23,
                                    ),
                                    range: 36..37,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    node_index: NodeIndex(
                                        25,
                                    ),
                                    range: 40..41,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | a = pass = c
  |     ^^^^ Syntax Error: Expected an identifier, but found a keyword 'pass' that cannot be used here
2 | a + b
3 | a = b = pass = c
  |


  |
1 | a = pass = c
2 | a + b
3 | a = b = pass = c
  |         ^^^^ Syntax Error: Expected an identifier, but found a keyword 'pass' that cannot be used here
4 | a + b
  |
